--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <title>Form102</title>
     </head>
     <body>
+        <div>
+            <a class="btn btn-primary" href="" role="button">Next</a>
+        </div>
         <div class="container">
             <div class="header">
                 <h1>Điền vào form</h1>
