--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
 </head>
-
 <body>
     <!DOCTYPE html>
     <html lang="en">
@@ -27,7 +25,8 @@
     </head>
     <body>
         <div>
-            <a class="btn btn-primary" href="" role="button">Next</a>
+            <a class="btn btn-primary" href=" https://hothitai2000.github.io/bai2.github.io/" role="button">Next</a>
+            
         </div>
         <div class="container">
             <div class="header">
